objects/Account.object
<CustomObject>
    <fields>
        <fullName>AIMS_Number__c</fullName>
        <description>AIMS Number is a unique customer identifier mastered in Purina ERP (JDE). Globally unique across WinField and Purina.</description>
        <externalId>true</externalId>
        <inlineHelpText>AIMS Number from Purina ERP (JDE)</inlineHelpText>
        <label>AIMS Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit_Key__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WF</fullName>
                </value>
                <value>
                    <fullName>FEED</fullName>
                </value>
                <value>
                    <fullName>DAIRY</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checksum__c</fullName>
        <label>Checksum</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Manager__c</fullName>
        <label>Collection Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Manager__c</fullName>
        <label>Credit Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CustomerManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>AddressBook (contact record) number used as a customer identifier and mastered in WinField ERP (JDE). This number makes sense only in the WinField universe.</description>
        <externalId>true</externalId>
        <inlineHelpText>AddressBook number from WinField ERP (JDE)</inlineHelpText>
        <label>Customer Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_checksum__c</fullName>
        <description>Used by Informatica to determine whether values of any field on this record in the data source are different from values on this record in Salesforce.</description>
        <label>Source Checksum</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Locator_Code__c</fullName>
        <description>Dealer Locator Code</description>
        <label>Dealer Locator Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equity_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag will identify that member has Equity with Land O’Lakes.</inlineHelpText>
        <label>Equity Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Farm_ID__c</fullName>
        <externalId>true</externalId>
        <label>Farm ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID_Prefix__c</fullName>
        <formula>LEFT(GUID__c,2)</formula>
        <label>GUID Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <description>Composite key that represents a globally unique customer ID. The key is built based on a concatenation of several items.
WinField and Purina: BU designation + AIMS Number
Dairy: Farm ID
Corporate:</description>
        <externalId>true</externalId>
        <label>Globally Unique Customer ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Code__c</fullName>
        <description>Invoice Delivery Code</description>
        <inlineHelpText>Code  Description 
           Mail Documents
1         Mail Documents
2         Email Document BillTrust Only
D        Send Documents to DTN
E        EDI
F        Send Documents via Fax
N        No Printing/Archival Only
W       Web</inlineHelpText>
        <label>Invoice Delivery Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAES_Number__c</fullName>
        <label>PAES Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent.Name)), Parent.Name, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Customer_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent.Name)), Parent.Customer_Number__c, Customer_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAD_Code__c</fullName>
        <description>RAD Code</description>
        <label>RAD Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Type__c</fullName>
        <label>Search Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Corporate</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>GUID__c</columns>
        <columns>Farm_ID__c</columns>
        <columns>PAES_Number__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.corp</value>
        </filters>
        <label>EMS - Corporate</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dairy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>GUID__c</columns>
        <columns>AIMS_Number__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>Farm_ID__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.dairy</value>
        </filters>
        <label>EMS - Dairy</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Feed</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AIMS_Number__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>GUID__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Search_Type__c</columns>
        <columns>Invoice_Delivery_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.feed</value>
        </filters>
        <label>EMS - Feed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Orphans</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>GUID__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GUID__c</field>
            <operation>contains</operation>
            <value>orphan</value>
        </filters>
        <label>EMS - Orphans</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WinField</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AIMS_Number__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>GUID__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Search_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.winfield</value>
        </filters>
        <label>EMS - WinField</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>System_Account</fullName>
        <active>true</active>
        <description>Used for synthetic (system) Accounts. Example: self-registration &quot;catch-all&quot; account</description>
        <label>System Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>corp</fullName>
        <active>true</active>
        <label>Corporate</label>
    </recordTypes>
    <recordTypes>
        <fullName>dairy</fullName>
        <active>true</active>
        <label>Dairy Foods</label>
    </recordTypes>
    <recordTypes>
        <fullName>feed</fullName>
        <active>true</active>
        <label>Purina</label>
    </recordTypes>
    <recordTypes>
        <fullName>winfield</fullName>
        <active>true</active>
        <label>WinField</label>
    </recordTypes>
    <validationRules>
        <fullName>System_Account_Name_Change</fullName>
        <active>true</active>
        <description>Only System Admin can edit the System Account Name</description>
        <errorConditionFormula>AND( ISCHANGED(Name) ,
$Profile.Name != &quot;System Administrator&quot;,
RecordType.Name = &quot;System Account&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Cannot edit Account Name.</errorMessage>
    </validationRules>
</CustomObject>